--- a/roles/infra_storage/tasks/setup_nextcloud.yml
+++ b/roles/infra_storage/tasks/setup_nextcloud.yml
@@ -22,7 +22,7 @@
       - "{{ NEXTCLOUD_PORT }}:80"
     env:
       SQLITE_DATABASE: "1"
-      NEXTCLOUD_ADMIN_USER: "admin"
+      NEXTCLOUD_ADMIN_USER: "{{ DEFAULT_ADMIN_NAME }}"
       NEXTCLOUD_ADMIN_PASSWORD: "{{ NEXTCLOUD_PASS }}"
       NEXTCLOUD_TRUSTED_DOMAINS: "{{ NEXTCLOUD_URL_IN_CONFIG }} {{ NEXTCLOUD_EXTERNAL_URL }} localhost"
     labels:
