--- a/roles/infra_storage/tasks/setup_nexus.yml
+++ b/roles/infra_storage/tasks/setup_nexus.yml
@@ -129,6 +129,7 @@
     force_basic_auth: yes
     status_code: 200,204
     body:
+      admin_name: "{{ DEFAULT_ADMIN_NAME }}"
       admin_password: "{{ NEXUS_ADMIN_PASS }}"
       docker_push_port: "{{ NEXUS_DOCKER_PUSH_PORT }}"
       docker_pull_port: "{{ NEXUS_DOCKER_PULL_PORT }}"
