--- a/roles/infra_ci/tasks/setup_jenkins.yml
+++ b/roles/infra_ci/tasks/setup_jenkins.yml
@@ -41,7 +41,7 @@
     path: "/tmp/jenkins/Dockerfile"
     regexp: 'FROM (.*)'
     replace: 'FROM arm32v7/openjdk:8-jre-stretch'
-  when: ansible_architecture in ["armv6l", "armv7l", "aarch64"]
+  when: ansible_architecture in ["armv7l", "aarch64"]
 
 - name: "Build jenkins image and with buildargs"
   docker_image:
