--- a/roles/infra_hard/tasks/setup_octoprint.yml
+++ b/roles/infra_hard/tasks/setup_octoprint.yml
@@ -22,7 +22,7 @@
       traefik.frontend.rule: "Host:{{ OCTOPRINT_EXTERNAL_URL }}"
     volumes:
       - "/{{ DATACORE }}/octoprint:/data"
-  when: ansible_architecture in ["armv6l", "armv7l", "aarch64"]
+  when: ansible_architecture in ["armv7l", "aarch64"]
 
 - name: "Launch octoprint container {{ OCTOPRINT_VERSION }}"
   docker_container:
