fix nextcloud external url

--- a/roles/infra_storage/vars/main.yml
+++ b/roles/infra_storage/vars/main.yml
@@ -17,5 +17,5 @@ FDROID_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['
 NEXTCLOUD_VERSION: "16.0.4"
 NEXTCLOUD_PORT: 8055
 NEXTCLOUD_EXPOSITION: "false"
-NEXTCLOUD_EXTERNAL_URL: "fdroid.{{ DOMAIN_NAME }}"
+NEXTCLOUD_EXTERNAL_URL: "drive.{{ DOMAIN_NAME }}"
 NEXTCLOUD_URL_IN_CONFIG: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
