add Odoo for the ERP service

--- a/roles/infra_storage/tasks/main.yml
+++ b/roles/infra_storage/tasks/main.yml
@@ -7,3 +7,6 @@
 
 - import_tasks: setup_nextcloud.yml
   when: ("nextcloud" in FEATURES)
+
+- import_tasks: setup_odoo.yml
+  when: ("vault" in FEATURES) and ("erp" in FEATURES)
