add service to see all services in the server as a homepage

--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -2,6 +2,8 @@
 - import_tasks: setup_backup.yml
   when: ("vault" in FEATURES) and (BACKUP_MODE != "")
 
+- import_tasks: setup_homepage.yml
+
 - import_tasks: setup_https.yml
   when: ("https" in FEATURES) and (DOMAIN_NAME != "")
 
