--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -8,6 +8,11 @@ TRAEFIK_FRONT_PORT: 8000
 TRAEFIK_EXPOSITION: "false"
 TRAEFIK_EXTERNAL_URL: "traefik.{{ DOMAIN_NAME }}"
 
+NGINX_VERSION: "1.17.5"
+NGINX_FRONT_PORT: 8001
+NGINX_EXPOSITION: "false"
+NGINX_EXTERNAL_URL: "home.{{ DOMAIN_NAME }}"
+
 PORTAINER_VERSION: "1.22.0"
 PORTAINER_PORT: 8010
 PORTAINER_EXPOSITION: "false"
