update insolante and nodered

--- a/roles/infra_hard/vars/main.yml
+++ b/roles/infra_hard/vars/main.yml
@@ -5,7 +5,7 @@ MQTT_EXPOSITION: "false"
 MQTT_READ_USER: "reader"
 MQTT_RW_USER: "writer"
 
-NODERED_VERSION: "0.20.7"
+NODERED_VERSION: "1.0.2-10"
 NODERED_FRONT_PORT: 8031
 NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
 NODERED_EXPOSITION: "false"
@@ -15,7 +15,7 @@ OCTOPRINT_PORT: 8033
 OCTOPRINT_EXTERNAL_URL: "printers.{{ DOMAIN_NAME }}"
 OCTOPRINT_EXPOSITION: "false"
 
-INSOLANTE_VERSION: "1.0.0-beta"
+INSOLANTE_VERSION: "1.1.0-beta"
 INSOLANTE_PORT: 8032
 INSOLANTE_URL: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 INSOLANTE_EXTERNAL_URL: "pcb.{{ DOMAIN_NAME }}"
