--- a/roles/infra_hard/tasks/setup_nodered.yml
+++ b/roles/infra_hard/tasks/setup_nodered.yml
@@ -10,10 +10,10 @@
   shell: "id -u {{ USER_NAME }}"
   register: user_id
 
-- name: "Launch nodered container for ARM {{ NODERED_VERSION }}-rpi-v8"
+- name: "Launch nodered container {{ NODERED_VERSION }}"
   docker_container:
     name: "nodered"
-    image: "nodered/node-red-docker:{{ NODERED_VERSION }}-rpi-v8"
+    image: "nodered/node-red:{{ NODERED_VERSION }}"
     state: started
     restart_policy: always
     recreate: yes
@@ -30,26 +30,3 @@
       - "/{{ DATACORE }}/nodered:/data"
   become: true
   become_user: "{{ USER_NAME }}"
-  when: ansible_architecture in ["armv7l", "aarch64"]
-
-- name: "Launch nodered container for x86_64 {{ NODERED_VERSION }}-v8"
-  docker_container:
-    name: "nodered"
-    image: "nodered/node-red-docker:{{ NODERED_VERSION }}-v8"
-    state: started
-    restart_policy: always
-    recreate: yes
-    user: "{{ user_id.stdout }}"
-    links:
-      - mqtt:mqtt
-    ports:
-      - "{{ NODERED_FRONT_PORT }}:1880"
-    labels:
-      traefik.port: "1880"
-      traefik.enable: "{{ NODERED_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ NODERED_EXTERNAL_URL }}"
-    volumes:
-      - "/{{ DATACORE }}/nodered:/data"
-  become: true
-  become_user: "{{ USER_NAME }}"
-  when: ansible_architecture in ["amd64", "x86_64"]
