--- a/roles/infra/tasks/main.yml
+++ b/roles/infra/tasks/main.yml
@@ -9,3 +9,6 @@
 
 - import_tasks: setup_portainer.yml
   when: ("portainer" in FEATURES)
+
+- import_tasks: setup_netdata.yml
+  when: ("netdata" in FEATURES)
