--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -17,3 +17,8 @@ PORTAINER_VERSION: "1.22.1"
 PORTAINER_PORT: 8010
 PORTAINER_EXPOSITION: "false"
 PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
+
+NETDATA_VERSION: "v1.18.1"
+NETDATA_PORT: 8011
+NETDATA_EXPOSITION: "false"
+NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
