--- a/roles/infra/tasks/setup_https.yml
+++ b/roles/infra/tasks/setup_https.yml
@@ -83,7 +83,9 @@
 
 - name: "Sleep for 30 seconds to let traefik starts"
   wait_for: timeout=30
-  delegate_to: localhost
+  delegate_to: 127.0.0.1
+  vars:
+    ansible_python_interpreter: python
 
 - name: "Make sure the certificate file has the correct rights"
   file:
