--- a/roles/common/tasks/setup_host_dependencies.yml
+++ b/roles/common/tasks/setup_host_dependencies.yml
@@ -1,15 +1,17 @@
 ---
+- name: "Locally install pip packages"
+  delegate_to: 127.0.0.1
+  pip:
+    name: [passlib]
+  vars:
+    ansible_python_interpreter: python
+
 - name: "Install python and python-pip"
   apt:
     pkg: [python2.7, python3-pip, apt-transport-https, ca-certificates, curl, software-properties-common, htop]
     state: present
     update_cache: true
     cache_valid_time: 3600
-
-- name: "Locally install pip packages"
-  delegate_to: 127.0.0.1
-  pip:
-    name: [passlib]
 
 - name: "Install pip packages"
   pip:
