--- a/roles/infra_storage/tasks/main.yml
+++ b/roles/infra_storage/tasks/main.yml
@@ -6,7 +6,7 @@
   when: ("nexus" in FEATURES) and ("vault" in FEATURES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
 - import_tasks: setup_nextcloud.yml
-  when: ("nextcloud" in FEATURES)
+  when: ("nextcloud" in FEATURES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
 
 - import_tasks: setup_odoo.yml
-  when: ("vault" in FEATURES) and ("erp" in FEATURES)
+  when: ("vault" in FEATURES) and ("erp" in FEATURES) and ansible_architecture in ["amd64", "x86_64"]
