--- a/roles/infra/tasks/setup_portainer.yml
+++ b/roles/infra/tasks/setup_portainer.yml
@@ -19,9 +19,13 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/portainer:/data"
     labels:
-      traefik.port: "5000"
       traefik.enable: "{{ PORTAINER_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ PORTAINER_EXTERNAL_URL }}"
+      traefik.http.services.portainer.loadbalancer.server.port: "9000"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.portainer_http.middlewares: "https_redirect"
+      traefik.http.routers.portainer_http.rule: "Host(`{{ PORTAINER_EXTERNAL_URL }}`)"
+      traefik.http.routers.portainer_https.rule: "Host(`{{ PORTAINER_EXTERNAL_URL }}`)"
+      traefik.http.routers.portainer_https.tls: "true"
   when: ansible_architecture in ["armv7l"]
 
 - name: "Launch portainer container {{ PORTAINER_VERSION }}"
@@ -37,7 +41,11 @@
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/portainer:/data"
     labels:
-      traefik.port: "5000"
       traefik.enable: "{{ PORTAINER_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ PORTAINER_EXTERNAL_URL }}"
+      traefik.http.services.portainer.loadbalancer.server.port: "9000"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.portainer_http.middlewares: "https_redirect"
+      traefik.http.routers.portainer_http.rule: "Host(`{{ PORTAINER_EXTERNAL_URL }}`)"
+      traefik.http.routers.portainer_https.rule: "Host(`{{ PORTAINER_EXTERNAL_URL }}`)"
+      traefik.http.routers.portainer_https.tls: "true"
   when: ansible_architecture in ["aarch64", "amd64", "x86_64"]
