--- a/roles/infra_hard/tasks/setup_mqtt.yml
+++ b/roles/infra_hard/tasks/setup_mqtt.yml
@@ -32,9 +32,13 @@
     ports:
       - "{{ MQTT_FRONT_PORT }}:1883"
     labels:
-      traefik.port: "1883"
       traefik.enable: "{{ MQTT_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ MQTT_EXTERNAL_URL }}"
+      traefik.http.services.mqtt.loadbalancer.server.port: "1883"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.mqtt_http.middlewares: "https_redirect"
+      traefik.http.routers.mqtt_http.rule: "Host(`{{ MQTT_EXTERNAL_URL }}`)"
+      traefik.http.routers.mqtt_https.rule: "Host(`{{ MQTT_EXTERNAL_URL }}`)"
+      traefik.http.routers.mqtt_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/mqtt:/mosquitto"
   become: true
