--- a/roles/infra_social/tasks/setup_peertube.yml
+++ b/roles/infra_social/tasks/setup_peertube.yml
@@ -68,9 +68,13 @@
       PEERTUBE_TRANSCODING_ENABLED: "false"
       PEERTUBE_CONTACT_FORM_ENABLED: "false"
     labels:
-      traefik.port: "9000"
       traefik.enable: "{{ PEERTUBE_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ PEERTUBE_EXTERNAL_URL }}"
+      traefik.http.services.peertube.loadbalancer.server.port: "9000"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.peertube_http.middlewares: "https_redirect"
+      traefik.http.routers.peertube_http.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_https.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/peertube/config:/config"
       - "/{{ DATACORE }}/peertube/data:/data"
@@ -112,9 +116,13 @@
       PEERTUBE_TRANSCODING_ENABLED: "false"
       PEERTUBE_CONTACT_FORM_ENABLED: "false"
     labels:
-      traefik.port: "9000"
       traefik.enable: "{{ PEERTUBE_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ PEERTUBE_EXTERNAL_URL }}"
+      traefik.http.services.peertube.loadbalancer.server.port: "9000"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.peertube_http.middlewares: "https_redirect"
+      traefik.http.routers.peertube_http.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_https.rule: "Host(`{{ PEERTUBE_EXTERNAL_URL }}`)"
+      traefik.http.routers.peertube_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/peertube/config:/config"
       - "/{{ DATACORE }}/peertube/data:/data"
