--- a/roles/infra_social/tasks/setup_wordpress.yml
+++ b/roles/infra_social/tasks/setup_wordpress.yml
@@ -50,8 +50,12 @@
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_NAME: wordpress
     labels:
-      traefik.port: "80"
       traefik.enable: "{{ WORDPRESS_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ WORDPRESS_EXTERNAL_URL }}"
+      traefik.http.services.wordpress.loadbalancer.server.port: "80"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.wordpress_http.middlewares: "https_redirect"
+      traefik.http.routers.wordpress_http.rule: "Host(`{{ WORDPRESS_EXTERNAL_URL }}`)"
+      traefik.http.routers.wordpress_https.rule: "Host(`{{ WORDPRESS_EXTERNAL_URL }}`)"
+      traefik.http.routers.wordpress_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/wordpress:/var/www"
