--- a/roles/infra_storage/tasks/setup_nextcloud.yml
+++ b/roles/infra_storage/tasks/setup_nextcloud.yml
@@ -26,9 +26,13 @@
       NEXTCLOUD_ADMIN_PASSWORD: "{{ NEXTCLOUD_PASS }}"
       NEXTCLOUD_TRUSTED_DOMAINS: "{{ NEXTCLOUD_URL_IN_CONFIG }} {{ NEXTCLOUD_EXTERNAL_URL }} localhost"
     labels:
-      traefik.port: "80"
       traefik.enable: "{{ NEXTCLOUD_EXPOSITION }}"
-      traefik.frontend.rule: "Host:{{ NEXTCLOUD_EXTERNAL_URL }}"
+      traefik.http.services.nextcloud.loadbalancer.server.port: "80"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.nextcloud_http.middlewares: "https_redirect"
+      traefik.http.routers.nextcloud_http.rule: "Host(`{{ NEXTCLOUD_EXTERNAL_URL }}`)"
+      traefik.http.routers.nextcloud_https.rule: "Host(`{{ NEXTCLOUD_EXTERNAL_URL }}`)"
+      traefik.http.routers.nextcloud_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/nextcloud:/var/www/html"
       - "/{{ DATACORE }}/nextcloud/apps:/var/www/html/custom_apps"
