--- a/roles/infra_hard/tasks/setup_octoprint.yml
+++ b/roles/infra_hard/tasks/setup_octoprint.yml
@@ -7,23 +7,6 @@
     state: directory
 
 # TODO: share the /dev/ACM... to connect the printer
-- name: "Launch octoprint container {{ OCTOPRINT_VERSION }}-arm32v7"
-  docker_container:
-    name: "octoprint"
-    image: "nunofgs/octoprint:{{ OCTOPRINT_VERSION }}-arm32v7"
-    state: started
-    restart_policy: always
-    recreate: yes
-    ports:
-      - "{{ OCTOPRINT_PORT }}:80"
-    labels:
-      traefik.enable: "{{ OCTOPRINT_EXPOSITION }}"
-      traefik.http.services.octoprint.loadbalancer.server.port: "80"
-      traefik.http.routers.octoprint.rule: "Host(`{{ OCTOPRINT_EXTERNAL_URL }}`)"
-    volumes:
-      - "/{{ DATACORE }}/octoprint:/data"
-  when: ansible_architecture in ["armv7l", "aarch64"]
-
 - name: "Launch octoprint container {{ OCTOPRINT_VERSION }}"
   docker_container:
     name: "octoprint"
@@ -43,4 +26,4 @@
       traefik.http.routers.octoprint_https.tls: "true"
     volumes:
       - "/{{ DATACORE }}/octoprint:/data"
-  when: ansible_architecture in ["amd64", "x86_64"]
+  when: ansible_architecture in ["amd64", "x86_64", "armv7l", "aarch64"]
