use official docker image of octoprint with device sharing

--- a/roles/infra_hard/vars/main.yml
+++ b/roles/infra_hard/vars/main.yml
@@ -10,10 +10,12 @@ NODERED_FRONT_PORT: 8031
 NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
 NODERED_EXPOSITION: "false"
 
-OCTOPRINT_VERSION: "1.4.0"
+OCTOPRINT_VERSION: "latest"
 OCTOPRINT_PORT: 8033
 OCTOPRINT_EXTERNAL_URL: "printers.{{ DOMAIN_NAME }}"
 OCTOPRINT_EXPOSITION: "false"
+OCTOPRINT_DEVICE_0: "/dev/null"
+OCTOPRINT_DEVICE_1: "/dev/null"
 
 INSOLANTE_VERSION: "1.1.0-beta"
 INSOLANTE_PORT: 8032
