--- a/roles/infra_hard/tasks/setup_octoprint.yml
+++ b/roles/infra_hard/tasks/setup_octoprint.yml
@@ -2,28 +2,30 @@
 - name: "Setup datacore directory"
   file:
     path: "/{{ DATACORE }}/octoprint"
-    owner: "{{ USER_NAME }}"
-    group: "{{ USER_NAME }}"
+    owner: "1000"
+    group: "1000"
     state: directory
 
-# TODO: share the /dev/ACM... to connect the printer
 - name: "Launch octoprint container {{ OCTOPRINT_VERSION }}"
   docker_container:
     name: "octoprint"
-    image: "nunofgs/octoprint:{{ OCTOPRINT_VERSION }}"
+    image: "octoprint/octoprint:{{ OCTOPRINT_VERSION }}"
     state: started
     restart_policy: always
     recreate: yes
     ports:
-      - "{{ OCTOPRINT_PORT }}:80"
+      - "{{ OCTOPRINT_PORT }}:5000"
+    devices:
+      - "{{ OCTOPRINT_DEVICE_0 }}:/dev/ttyACM0"
+      - "{{ OCTOPRINT_DEVICE_1 }}:/dev/ttyACM1"
     labels:
       traefik.enable: "{{ OCTOPRINT_EXPOSITION }}"
-      traefik.http.services.octoprint.loadbalancer.server.port: "80"
+      traefik.http.services.octoprint.loadbalancer.server.port: "5000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.octoprint_http.middlewares: "https_redirect"
       traefik.http.routers.octoprint_http.rule: "Host(`{{ OCTOPRINT_EXTERNAL_URL }}`)"
       traefik.http.routers.octoprint_https.rule: "Host(`{{ OCTOPRINT_EXTERNAL_URL }}`)"
       traefik.http.routers.octoprint_https.tls: "true"
     volumes:
-      - "/{{ DATACORE }}/octoprint:/data"
+      - "/{{ DATACORE }}/octoprint:/home/octoprint/.octoprint"
   when: ansible_architecture in ["amd64", "x86_64", "armv7l", "aarch64"]
