--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -15,3 +15,12 @@ JENKINS_USER: "{{ DEFAULT_ADMIN_NAME }}"
 JENKINS_URL: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ JENKINS_PORT }}"
 JENKINS_THEME_COLOR: "blue-grey"
 JENKINS_RESTART_DELAY: 100
+
+REDMINE_VERSION: "4.1.1"
+REDMINE_DB_VERSION: "10-alpine"
+REDMINE_DB_USER: "redmine_user"
+REDMINE_DB_PASS: "redmine_pass"
+REDMINE_DB_NAME: "redmine"
+REDMINE_FRONT_PORT: 8024
+REDMINE_EXPOSITION: "false"
+REDMINE_EXTERNAL_URL: "redmine.{{ DOMAIN_NAME }}"
